--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "web-game",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite dev",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +13,6 @@
   "dependencies": {
     "three": "^0.160.0",
     "vite": "^5.0.11"
-  },
-  "scripts": {
-    "dev": "vite dev"
   },
   "devDependencies": {
     "prettier": "^3.2.2"
