--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-game",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
+  "main": "./src/main.ts",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build"
@@ -15,6 +15,7 @@
     "vite": "^5.0.11"
   },
   "devDependencies": {
+    "@types/three": "^0.160.0",
     "prettier": "^3.2.2"
   }
 }
