--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.0.11"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/three": "^0.160.0",
     "prettier": "^3.2.2"
   }
