--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
+    "plugins": ["@trivago/prettier-plugin-sort-imports"],
     "trailingComma": "es5",
     "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
     "importOrder": ["<THIRD_PARTY_MODULES>", "^[./]"],
     "importOrderSeparation": true,
-    "importOrderSortSpecifiers": true,
-    "plugins": ["@trivago/prettier-plugin-sort-imports"]
+    "importOrderSortSpecifiers": true
 }
