--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "web-game",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./src/main.ts",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "three": "^0.160.0",
-    "vite": "^5.0.11"
-  },
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/three": "^0.160.0",
-    "prettier": "^3.2.2"
-  }
+    "name": "nahaba-game",
+    "version": "0.1.0",
+    "description": "A very nahabaesque game",
+    "main": "./src/main.ts",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build"
+    },
+    "keywords": [],
+    "author": "Mykhailo Bloshko",
+    "license": "ISC",
+    "dependencies": {
+        "three": "^0.160.0",
+        "vite": "^5.0.11"
+    },
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/three": "^0.160.0",
+        "prettier": "^3.2.2"
+    }
 }
