--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Mykhailo Bloshko",
     "license": "ISC",
     "dependencies": {
+        "nipplejs": "^0.10.1",
         "three": "^0.160.0",
         "vite": "^5.0.11"
     },
